retrieve object instead of making new object when updating row